--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ button {
     position: absolute;
     width: 100%;
     height: 50%;
-    background-color: #3bac07;
+    background-color: #017143;
     top: 400px;
     left: 0;
     z-index: -1;
