--- a/style.css
+++ b/style.css
@@ -12,18 +12,80 @@ body {
 }
 
 
-
-header a {
-   padding: 10px;
-    cursor: pointer;
-      text-align: justify;
-    text-decoration: none;
-    color: #017143;
+.logo {
+    width: 100px;
+    
+}
+.logo:hover {
+    transform: translateY(-5px);
 }
 
+.topico {
+    background-color: #e6f0ec;
+    /*cor do fundo*/
+    color: #333;
+    /*cor do texto*/
+    font-size: 18px;
+    border: none;
+    /*sem borda na caixa*/
+    padding: 30px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+.topico:hover{
+    transform: translateY(-5px);
+}
+
+.cafe {
+    background-color: #e6f0ec;
+    /*cor do fundo*/
+    color: #333;
+    /*cor do texto*/
+    border: none;
+    /*sem borda na caixa*/
+    font-size: 18px;
+    padding: 30px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+.cafe:hover{
+    transform: translateY(-5px);
+}
+
+.social {
+    background-color: #e6f0ec;
+    /*cor do fundo*/
+    color: #333;
+    /*cor do texto*/
+    border: none;
+    /*sem borda na caixa*/
+    font-size: 18px;
+    padding: 30px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+.social:hover{
+    transform: translateY(-5px);
+}
+
+.loja {
+    background-color: #e6f0ec;
+    /*cor do fundo*/
+    color: #333;
+    /*cor do texto*/
+    border: none;
+    /*sem borda na caixa*/
+    font-size: 18px;
+    padding: 30px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+.loja:hover{
+    transform: translateY(-5px);
+}
 h1 {
     color: #333;
-    font-size:30px;
+    font-size: 35px;
     font-weight: 200px;
 }
 
@@ -38,17 +100,17 @@ p {
     font-size: 26px;
     margin-top: 20px;
     margin-bottom: 30px;
-
-
 }
 
 .logo-historia {
     width: 160px;
 }
 
-.logo {
-    width: 80px;
+.logo-historia:hover {
+    transform: translateY(-5px);
 }
+
+
 
 .grande {
     width: 350px;
@@ -94,23 +156,29 @@ p {
 
 
 button {
-    background-color: #ffff;
+    background-color: #017143;
     /*cor do fundo*/
-    color: #017143;
+    color: #ffff;
     /*cor do texto*/
     border: none;
     /*sem borda na caixa*/
     padding: 20px;
     border-radius: 30px;
     cursor: pointer;
+
+}
+
+button:hover {
+    transform: translateY(-10px);
 }
 
 .circulo {
     position: absolute;
     width: 100%;
-    height: 50%;
+    height: 150%;
     background-color: #017143;
-    top: 400px;
+    top: 0px;
     left: 0;
+    clip-path: circle(600px at right 600px);
     z-index: -1;
 }
