--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    
+
 }
 
 body {
@@ -12,11 +12,10 @@ body {
     padding-left: 100px;
 }
 
-
 .logo {
     width: 80px;
-    
 }
+
 .logo:hover {
     transform: translateY(-5px);
 }
@@ -33,7 +32,8 @@ body {
     border-radius: 100px;
     cursor: pointer;
 }
-.topico:hover{
+
+.topico:hover {
     transform: translateY(-5px);
 }
 
@@ -49,7 +49,8 @@ body {
     border-radius: 100px;
     cursor: pointer;
 }
-.cafe:hover{
+
+.cafe:hover {
     transform: translateY(-5px);
 }
 
@@ -65,7 +66,8 @@ body {
     border-radius: 100px;
     cursor: pointer;
 }
-.social:hover{
+
+.social:hover {
     transform: translateY(-5px);
 }
 
@@ -81,12 +83,14 @@ body {
     border-radius: 100px;
     cursor: pointer;
 }
-.loja:hover{
+
+.loja:hover {
     transform: translateY(-5px);
 }
+
 h1 {
     color: #333;
-    font-size: 35px;
+    font-size: 25px;
     font-weight: 200px;
 }
 
@@ -94,24 +98,21 @@ span {
     color: #017143;
     font-size: 50px;
     font-weight: 600;
-
 }
 
 p {
-    font-size: 26px;
+    font-size: 18px;
     margin-top: 20px;
     margin-bottom: 30px;
 }
 
 .logo-historia {
-    width: 160px;
+    width: 200px;
 }
 
 .logo-historia:hover {
     transform: translateY(-5px);
 }
-
-
 
 .grande {
     width: 350px;
@@ -146,7 +147,7 @@ p {
     width: 600px;
     display: flex;
     justify-content: flex-end;
-    margin-top: 200px;
+    margin-top: 250px;
 }
 
 .menu {
@@ -166,7 +167,6 @@ button {
     padding: 10px;
     border-radius: 30px;
     cursor: pointer;
-
 }
 
 button:hover {
@@ -175,10 +175,11 @@ button:hover {
 
 .circulo {
     position: absolute;
-    
+    width: 100%;
+    height: 150%;
     background-color: #017143;
     top: 0px;
     left: 0;
-    clip-path: circle(600px at right 600px);
+    clip-path: circle(490px at right 600px);
     z-index: -1;
 }
